--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "topthink/think",
+    "name": "gzhantao/think-admin",
     "description": "the new thinkphp framework",
     "type": "project",
     "keywords": [
