--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "liu21st",
-            "email": "liu21st@gmail.com"
+            "name": "daxiang",
+            "email": "w0k2y1@163.com"
         }
     ],
     "require": {
