--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "daxiang",
+            "name": "gzhantao",
             "email": "w0k2y1@163.com"
         }
     ],
