--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     ],
     "homepage": "https://github.com/gzhantao/think-admin",
     "license": "Apache-2.0",
+    "support": {  
+        "source": "https://github.com/gzhantao/think-admin"  
+    },
     "authors": [
         {
             "name": "gzhantao",
