--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "gzhantao/think-admin": "1.0.0",
+        "gzhantao/think-admin": "^1.0.0",
         "80h4ck/tp5-auth": "^1.0",
         "endroid/qr-code": "^2.5",
         "phpoffice/phpexcel": "^1.8"
